scrollbar fixed

--- a/src/app/board/add-task/add-task.component.scss
+++ b/src/app/board/add-task/add-task.component.scss
@@ -538,6 +538,10 @@ option {
         padding-bottom: 90px;
     }
 
+    .inner-content::-webkit-scrollbar{
+        display: none;
+    }
+
     .background {
         height: 100vh;
         width: 100%;
